name:                GasMasters
version:             0.1.0.0
synopsis:            Propane Sensors and Routing
description:         Please see README.md
homepage:            http://52.88.174.202:8080
license:             BSD3
license-file:        LICENSE
author:              Michael Anderson
maintainer:          nomicflux@gmail.com
copyright:           2016 Integrated Technology Solutions
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , App
                     , Api.User
                     , Api.BlogPost
                     , Models.User
                     , Models.BlogPost
                     , Queries.User
                     , Queries.BlogPost
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server == 0.8
                     , wai
                     , warp
                     , datetime
                     , opaleye
                     , product-profunctors
                     , bytestring
                     , postgresql-simple
                     , transformers
                     , pwstore-fast
                     , resource-pool
                     , wai-extra
                     , fast-logger
                     , data-default-class
                     , text
  default-language:    Haskell2010

executable gastmasters
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , gasmasters
  default-language:    Haskell2010

test-suite gasmasters
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gasmasters
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
